# hecate

./: readme.org
cmake_proposal/: CMakeLists.txt
cmake_proposal/apps/: CMakeLists.txt  theia_killer.cpp
cmake_proposal/libs/: CMakeLists.txt
cmake_proposal/libs/A/: CMakeLists.txt
cmake_proposal/libs/A/include/: a.hpp  iaa.hpp
cmake_proposal/libs/A/mocks/: mock_iaa.cpp  mock_iaa.hpp
cmake_proposal/libs/A/src/: a.cpp  aa.cpp  aa.hpp
cmake_proposal/libs/A/tests/: test_a.cpp  test_aa.cpp
cmake_proposal/libs/B/: CMakeLists.txt
cmake_proposal/libs/B/include/: IB.hpp
cmake_proposal/libs/B/src/: B.cpp  B.hpp
cmake_proposal/libs/B/tests/: CMakeLists.txt  test_b.cpp
